--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="bg-gray-100 font-roboto">
+<body class="bg-white font-roboto">
     <!-- Navigation Bar -->
     <nav class="bg-primary text-white fixed top-0 left-0 w-full z-50 shadow-lg ">
         <div class="mx-auto flex justify-between items-center py-4 px-16">
@@ -90,7 +90,7 @@
     </nav>
 
     <!-- Content Section with Background Image -->
-    <div class="relative flex items-center  bg-cover bg-center h-lvh"
+    <div class="relative flex items-center bg-white bg-cover bg-center h-lvh"
         style="background-image: url('/src/images/home1.jpg'); ">
         <div class="bg-red-500">
             <h1 class="absolute top-[250px] left-20 text-white text-3xl">Affordable and Reiable Vehicle Rentals</h1>
@@ -750,6 +750,156 @@
             </div>
         </div>
     </div>
+
+    <!-- Continue Where You Left Off Section -->
+    <!-- <div class="bg-white py-10 mt-20 flex items-center">
+        <div class="container mx-auto px-6 ">
+            <h2 class="text-2xl font-semibold mb-6 text-gray-800">Continue where you left off</h2>
+            <div class="flex space-x-4 overflow-x-auto">
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+
+
+
+
+
+    <div class="bg-white py-10 mt-20 flex items-center">
+        <div class="container max-w-5xl mx-auto">
+            <h2 class="text-2xl font-semibold mb-6 text-gray-800">Continue where you left off</h2>
+            <div class="flex space-x-4 overflow-x-auto scrollbar-hide" onwheel="scrollHorizontally(event)">
+                <!-- Card 1 -->
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+                <!-- Card 4 -->
+                <div class="bg-gray-200 rounded-lg shadow-md p-4 flex items-center space-x-4 min-w-[420px]">
+                    <div class="flex items-center">
+                        <span class="text-2xl">🚗</span>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-800">Car from Kathmandu to Pokhara</p>
+                        <p class="text-sm text-gray-500">Mon, Jan 6 - Tue Jan 7</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Travel Experience Section -->
+    <div class="bg-white py-10">
+        <div class="relative flex overflow-x-auto max-w-5xl mx-auto scrollbar-hide" id="scrollable-banner">
+            <!-- Banner 1 -->
+            <div class="relative bg-cover bg-center h-96 min-w-full max-w-5xl flex-shrink-0"
+                style="background-image: url('/src/images/home2.jpg');">
+                <div
+                    class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-end items-start text-center pl-5 pb-5">
+                    <h2 class="text-3xl md:text-4xl font-bold text-white">
+                        The ultimate travel experience with Roam Nepal
+                    </h2>
+                    <p class="text-lg text-white mb-6">Travel across Nepal made simple and hassle-free.</p>
+                    <button class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">
+                        Read More
+                    </button>
+                </div>
+            </div>
+
+            <!-- Banner 2 -->
+            <div class="relative bg-cover bg-center h-96 min-w-full max-w-5xl flex-shrink-0"
+                style="background-image: url('/src/images/home1.jpg');">
+                <div
+                    class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-end items-start text-center pl-5 pb-5">
+                    <h2 class="text-3xl md:text-4xl font-bold text-white">
+                        Discover the beauty of Nepal
+                    </h2>
+                    <p class="text-lg text-white mb-6">Plan your trips with ease and comfort.</p>
+                    <button class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">
+                        Read More
+                    </button>
+                </div>
+            </div>
+
+            <!-- Banner 3 -->
+            <div class="relative bg-cover bg-center h-96 min-w-full max-w-5xl flex-shrink-0"
+                style="background-image: url('/src/images/home2.jpg');">
+                <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-end items-start text-center pl-5 pb-5">
+                    <h2 class="text-3xl md:text-4xl font-bold text-white">
+                        Explore the Himalayas
+                    </h2>
+                    <p class="text-lg text-white mb-6">Experience adventure like never before.</p>
+                    <button class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">
+                        Read More
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+
 
     <script type="text/javascript" src="scripts/script.js"></script>
 </body>
