--- a/src/index.html
+++ b/src/index.html
@@ -1055,6 +1055,44 @@
         </div>
     </div>
 
+    <!-- Mobile apps -->
+    <div class="bg-white py-10">
+        <div class="bg-blue-600 container max-w-5xl mx-auto px-6 flex flex-col md:grid-cols-3 items-center gap-8">
+            <!-- Text Section -->
+            <div class="flex flex-col items-center md:text-left text-white">
+                <h2 class="text-3xl font-bold mt-4">Mobile apps are out now!</h2>
+                <p class="text-lg mb-6">Stay ahead from your phone</p>
+                <div class="flex justify-center md:justify-start gap-10">
+                    <a href="#">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
+                            alt="Google Play" class="h-12" />
+                    </a>
+                    <a href="#">
+                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+                            alt="App Store" class="h-12" />
+                    </a>
+                </div>
+            </div>
+
+            <!-- Phone Images -->
+            <div class="flex justify-center gap-10 relative">
+                    <img src="images/android.png" alt="Phone 1" class="h-64 md:h-72 lg:h-52 shadow-lg rounded-lg" />
+                    <img src="images/iphone.png" alt="Phone 2"
+                        class="h-64 md:h-72 lg:h-52 shadow-lg rounded-lg" />
+                    <img src="images/qrcode.png" alt="QR Code" class="absolute top-0 bottom-10 left-[450px] w-32 h-32" />
+            </div>
+
+            <!-- <div class="relative">
+                <img src="images/qrcode.png" alt="QR Code" class="absolute top-40 left-20 w-40 h-40" />
+            </div> -->
+
+        </div>
+    </div>
+
+
+
+
+
     <footer class="bg-gray-800 text-gray-400 py-10">
         <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8">
             <!-- Services -->
