--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
 <body class="bg-white font-roboto">
     <!-- Navigation Bar -->
-    <nav class="bg-primary text-white fixed top-0 left-0 w-full z-50 shadow-lg ">
+    <nav class="bg-[#03677E] text-white fixed top-0 left-0 w-full z-50 shadow-lg ">
         <div class="mx-auto flex justify-between items-center py-4 px-16">
             <!-- Logo -->
             <div class="text-2xl font-bold">Roam Nepal</div>
@@ -1089,10 +1089,6 @@
         </div>
     </div>
 
-
-
-
-
     <footer class="bg-gray-800 text-gray-400 py-10">
         <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8">
             <!-- Services -->
@@ -1208,12 +1204,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
 
     <script type="text/javascript" src="scripts/script.js"></script>
 </body>
