--- a/src/rental.html
+++ b/src/rental.html
@@ -307,12 +307,31 @@
                 <!-- Card 1 -->
                 <div class="bg-white rounded-md border border-gray-300  mb-6 border-b">
                     <div class="flex border-b-[1px] border-gray-300">
-                        <!-- Image Section -->
-                        <div class="w-1/3 relative">
-                            <img src="/src/images/rental_vehicle_1.jpeg" alt="Car Image"
-                                class="w-full h-full object-cover">
-                            <span
-                                class="absolute top-2 left-2 bg-yellow-300 text-yellow-800 text-xs font-bold px-2 py-1 rounded">Trending</span>
+                        <div class="relative w-[45%] flex justify-center">
+                            <!-- Main Image -->
+                            <div class="relative">
+                                <img id="main-image" src="/src/images/rental_vehicle_1.jpeg" alt="Main Photo"
+                                    class="w-full h-full object-cover rounded-md">
+                                <!-- Trending Badge -->
+                                <span
+                                    class="absolute top-2 left-2 bg-yellow-300 text-yellow-800 text-sm font-bold px-2 py-1 rounded">
+                                    Trending
+                                </span>
+                            </div>
+
+                            <!-- Thumbnail Images -->
+                            <div class="absolute bottom-2 flex w-11/12 h-[60px] gap-1  justify-center items-center">
+                                <img onclick="updateMainImage(this)" src="/src/images/bus-image.jpg" alt="Thumbnail 1"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/home1.jpg" alt="Thumbnail 2"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/home2.jpg" alt="Thumbnail 3"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 4"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 5"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                            </div>
                         </div>
 
                         <!-- Content Section -->
@@ -379,11 +398,31 @@
                 <!-- Card 2 -->
                 <div class="bg-white rounded-md border border-gray-300 mb-6 border-b">
                     <div class="flex border-b-[1px] border-gray-300">
-                        <div class="w-1/3 relative">
-                            <img src="/src/images/rental_vehicle_1.jpeg" alt="Car Image"
-                                class="w-full h-full object-cover">
-                            <span
-                                class="absolute top-2 left-2 bg-yellow-300 text-yellow-800 text-xs font-bold px-2 py-1 rounded">Trending</span>
+                        <div class="relative w-[45%] flex justify-center">
+                            <!-- Main Image -->
+                            <div class="relative">
+                                <img id="main-image" src="/src/images/rental_vehicle_1.jpeg" alt="Main Photo"
+                                    class="w-full h-full object-cover rounded-md">
+                                <!-- Trending Badge -->
+                                <span
+                                    class="absolute top-2 left-2 bg-yellow-300 text-yellow-800 text-sm font-bold px-2 py-1 rounded">
+                                    Trending
+                                </span>
+                            </div>
+
+                            <!-- Thumbnail Images -->
+                            <div class="absolute bottom-2 flex w-11/12 h-[60px] gap-1  justify-center items-center">
+                                <img onclick="updateMainImage(this)" src="/src/images/bus-image.jpg" alt="Thumbnail 1"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/home1.jpg" alt="Thumbnail 2"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/home2.jpg" alt="Thumbnail 3"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 4"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 5"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                            </div>
                         </div>
 
                         <div class="w-2/3 p-4">
@@ -445,11 +484,37 @@
                 <!-- Card 3 -->
                 <div class="bg-white rounded-md border border-gray-300 mb-6 border-b">
                     <div class="flex border-b-[1px] border-gray-300">
-                        <div class="w-1/3 relative">
+                        <!-- <div class="w-1/3 relative">
                             <img src="/src/images/rental_vehicle_1.jpeg" alt="Car Image"
                                 class="w-full h-full object-cover">
                             <span
                                 class="absolute top-2 left-2 bg-yellow-300 text-yellow-800 text-xs font-bold px-2 py-1 rounded">Trending</span>
+                        </div> -->
+                        <div class="relative w-[45%] flex justify-center">
+                            <!-- Main Image -->
+                            <div class="relative">
+                                <img id="main-image" src="/src/images/rental_vehicle_1.jpeg" alt="Main Photo"
+                                    class="w-full h-full object-cover rounded-md">
+                                <!-- Trending Badge -->
+                                <span
+                                    class="absolute top-2 left-2 bg-yellow-300 text-yellow-800 text-sm font-bold px-2 py-1 rounded">
+                                    Trending
+                                </span>
+                            </div>
+
+                            <!-- Thumbnail Images -->
+                            <div class="absolute bottom-2 flex w-11/12 h-[60px] gap-1  justify-center items-center">
+                                <img onclick="updateMainImage(this)" src="/src/images/bus-image.jpg" alt="Thumbnail 1"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/home1.jpg" alt="Thumbnail 2"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/home2.jpg" alt="Thumbnail 3"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 4"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 5"
+                                    class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
+                            </div>
                         </div>
 
                         <div class="w-2/3 p-4">
