--- a/src/rental.html
+++ b/src/rental.html
@@ -257,7 +257,7 @@
 
 
         <!-- Main content -->
-        <main class="fixed top-[210px] left-[350px] h-full w-[calc(100%-350px)] py-4 px-8 overflow-auto scrollbar-hide">
+        <main class="fixed top-[212px] left-[350px] h-full w-[calc(100%-350px)] py-4 px-8 overflow-auto scrollbar-hide">
             <div class="w-full grid grid-cols-12 gap-4">
                 <!-- Card 1 -->
                 <div class="bg-[#FFF2D6] col-span-4 h-28 p-4 rounded-sm shadow-md flex items-center justify-between">
@@ -327,22 +327,24 @@
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
                                 <img onclick="updateMainImage(this)" src="/src/images/home2.jpg" alt="Thumbnail 3"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
-                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 4"
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg"
+                                    alt="Thumbnail 4"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
-                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 5"
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg"
+                                    alt="Thumbnail 5"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
                             </div>
                         </div>
 
                         <!-- Content Section -->
-                        <div class="w-2/3 p-4">
+                        <div class="w-2/3 py-4 pl-4">
                             <!-- Title and Tagline -->
                             <div class="flex justify-between items-start">
                                 <div>
                                     <h2 class="text-xl font-bold text-gray-800">Midsize Elite SUV</h2>
                                     <p class="text-sm text-teal-600">Tata Nexon</p>
                                 </div>
-                                <button class="bg-orange-500 text-white text-sm px-3 py-1 rounded-lg">Flash
+                                <button class="bg-orange-500 text-white text-sm px-3 py-1 rounded-sm">Flash
                                     Sale</button>
                             </div>
 
@@ -359,13 +361,23 @@
                             </div>
 
                             <!-- Price and Booking -->
-                            <div class="flex items-center justify-between mt-6 ">
-                                <div>
+                            <div class="flex items-center justify-between mt-3 ">
+                                <div class="w-1/3">
                                     <p class="text-sm text-gray-500">Starts From</p>
                                     <p class="text-2xl font-bold text-teal-600">Rs.3000</p>
                                     <p class="text-xs text-red-500">Free Cancellation</p>
                                 </div>
-                                <button class="bg-teal-600 text-white px-6 py-3 rounded-lg">Book Tickets</button>
+                                <div class="w-2/3 flex flex-col items-end p-4 ">
+                                    <div class="flex flex-col items-center w-full">
+                                        <div class="text-sm">⭐⭐⭐⭐⭐ <span>(145 Bookings)</span></div>
+                                        <button class="bg-[#0B3C49] w-4/5 text-white px-6 py-3 rounded-sm">Book
+                                            Tickets
+                                        </button>
+                                        <span class="text-[#0B3C49] font-bold text-sm">Instant Booking Available!</span>
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -418,9 +430,11 @@
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
                                 <img onclick="updateMainImage(this)" src="/src/images/home2.jpg" alt="Thumbnail 3"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
-                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 4"
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg"
+                                    alt="Thumbnail 4"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
-                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 5"
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg"
+                                    alt="Thumbnail 5"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
                             </div>
                         </div>
@@ -510,9 +524,11 @@
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
                                 <img onclick="updateMainImage(this)" src="/src/images/home2.jpg" alt="Thumbnail 3"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
-                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 4"
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg"
+                                    alt="Thumbnail 4"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
-                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg" alt="Thumbnail 5"
+                                <img onclick="updateMainImage(this)" src="/src/images/rental_vehicle_1.jpeg"
+                                    alt="Thumbnail 5"
                                     class="thumbnail w-14 h-14 object-cover rounded-sm cursor-pointer border-2 border-white">
                             </div>
                         </div>
